<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shame_bg"
    android:keepScreenOn="true">

    <View
        android:id="@+id/shameRedLine"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        android:background="@color/shame_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/shame_title"
        android:textColor="@color/shame_red"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shameRedLine" />

    <TextView
        android:id="@+id/tvShameMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:text="@string/shame_message"
        android:textColor="#FFD9D9"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShameTitle" />

    <TextView
        android:id="@+id/tvShameFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/shame_footer"
        android:textColor="#8A5A5A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShameMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>
